--- a/css/reset.css
+++ b/css/reset.css
@@ -24,5 +24,7 @@ address, em { font-style:normal }
     text-indent:-9999px;
     line-height:0; }
 
-
+header, footer, section, article, aside, nav, main, figure {
+    display: block;
+}
 
