--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,27 @@
     margin: 0 auto;
 }
 
+.skip a {
+    display: block;
+    background: #000;    
+    color: #fff;
+    text-align: center;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    position: absolute;
+    top: -100px;
+}
+
+.skip a:focus {
+    width: 100%;
+    height: auto;
+    padding: 10px 0;
+    position: fixed;
+    top: 0;
+    z-index: 99999;
+}
+
 #header {
     position: fixed;
     width: 100%;
