--- a/css/reset.css
+++ b/css/reset.css
@@ -28,3 +28,24 @@ header, footer, section, article, aside, nav, main, figure {
     display: block;
 }
 
+.skip a {
+    display: block;
+    background: #000;    
+    color: #fff;
+    text-align: center;
+    padding: 0;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    position: absolute;
+    top: -100px;
+}
+
+.skip a:focus {
+    width: 100%;
+    height: auto;
+    padding: 10px 0;
+    position: fixed;
+    top: 0;
+    z-index: 99999;
+}
