회원가입 이메일까지

--- a/css/reset.css
+++ b/css/reset.css
@@ -27,3 +27,6 @@ address, em { font-style:normal }
 header, footer, section, article, aside, nav, main, figure {
     display: block;
 }
+
+fieldset {border: none;}
+legend {display: none;}
