--- a/css/join.css
+++ b/css/join.css
@@ -1,3 +1,67 @@
 @charset "utf-8";
 @import url(./reset.css);
 @import url(./common.css);
+
+#join_page {padding: 217px 0 100px;}
+
+#join_page h2 {
+    text-align: center; font-size: 30px;
+    padding-bottom: 30px;
+}
+
+.join_form .info_pilsoo {
+    padding: 0 0 10px 20px;
+    border-bottom: 2px solid #000;
+    font-size: 15px;
+    color: #f00;
+}
+
+.join_form .pilsoo_item {
+    position: relative;
+}
+
+.join_form .pilsoo_item:before {
+    content: '*';
+    position: absolute;
+    top: 1px;
+    left: 5px;
+    width: 15px;
+    font-size: bold;
+    font-size: 17px;
+    color: #f00;
+}
+
+.join_form .tit_lbl {
+    display: inline-block; width: 20%;
+    line-height: 45px;
+    font-size: 17px;
+    font-weight: bold;
+    letter-spacing: -2px;
+    padding-left: 20px;
+}
+
+.join_form .info_content {
+    display: inline-block; 
+    width: 79%;
+    vertical-align: top;
+}
+
+.join_form .info_list {padding: 10px 0; border-bottom: 1px solid #ccc;}
+
+.join_form .info_list li {
+    padding: 8px 0; 
+    background: #eee;
+}
+
+.join_form .info_content input[type='text'],
+.join_form .info_content input[type='password'],
+.join_form .info_content select
+ {
+     height: 45px; border: 1px solid #ccc; padding: 0 1em;
+     vertical-align: top;
+}
+
+ .join_form .w320 {width: 320px;}
+ .join_form .w160 {width: 160px;}
+
+ .join_form .info_content span {line-height: 45px;}
