--- a/css/join.css
+++ b/css/join.css
@@ -52,7 +52,6 @@
 
 .join_form .info_list li {
     padding: 8px 0; 
-    /* background: #eee; */
 }
 
 .join_form .info_content input[type='text'],
@@ -87,6 +86,7 @@
     padding: 10px;
     line-height: 1.5;
     resize: none;
+    /* 반영이 안되는것 같은 부분 */
 }
 
 .join_form .btn {margin-top: 20px; text-align: center;}
@@ -94,6 +94,7 @@
     width: 80px; height: 30px; background-color: #000; color: #fff;
     border: none;  border-radius: 5px; font-size: 18px;
     margin: 0 10px;
+    /* 반영이 안되는것 같은 부분 */
 }
 .join_form .btn input[type="submit"] {
     background-color: #f00;
