--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,46 @@
 @charset "utf-8";
 @import url(./reset.css);
 @import url(./common.css);
+
+#login_page {padding: 217px 0 100px;}
+#login_page h2 {
+    text-align: center; font-size: 30px;
+    padding-bottom: 30px;
+}
+#login_page .login_content {
+    padding: 100px 0; border: 1px solid #ccc; text-align: center;
+    margin: 10px 0;
+}
+#login_page .login_content .idpw_box {display: inline-block; margin-right: 5px;}
+#login_page .login_content .idpw_box label {
+    display: inline-block; width: 100px; text-align: left;
+    margin: 10px 0;
+    line-height: 40px; 
+}
+
+#login_page .login_content .idpw_box input {
+    width: 200px;height: 40px;line-height: 40px;
+    border: 1px solid #ccc;
+    padding: 0 1em; vertical-align: top;
+    margin: 10px 0;
+}
+
+#login_page .login_content button {
+    width: 100px;
+    height: 100px;
+    vertical-align: top;
+    margin: 10px 0 10px 5px;
+    background-color: slateblue;
+    border: none;
+    color: #fff;
+}
+
+#login_page .login_form .check {
+    margin: 20px 370px 20px;
+    /* text-align: left; */
+    padding-left: 70px;
+}
+
+#login_page .login_form .check label {
+    padding-right: 50px;
+}
