--- a/css/login.css
+++ b/css/login.css
@@ -2,10 +2,12 @@
 @import url(./reset.css);
 @import url(./common.css);
 
-#login_page {padding: 217px 0 100px;}
+#login_page {padding: 170px 0 50px;}
 #login_page h2 {
-    text-align: center; font-size: 30px;
+    /* text-align: center;  */
+    font-size: 30px;
     padding-bottom: 30px;
+    font-weight: bold;
 }
 #login_page .login_content {
     padding: 100px 0; border: 1px solid #ccc; text-align: center;
