--- a/css/join.css
+++ b/css/join.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 @import url(./reset.css);
 @import url(./common.css);
+@import "./rwdcommon.css";
+
 
 /* ::placeholder {color: black;} */
 select {color: #757575; height: 45px; vertical-align: middle;}
