--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 @import url(./reset.css);
 @import url(./common.css);
+@import "./rwdcommon.css";
 
 #login_page {padding: 170px 0 50px;}
 #login_page h2 {
