--- a/css/join.css
+++ b/css/join.css
@@ -64,6 +64,32 @@ select {color: #757575; height: 45px; vertical-align: middle;}
      vertical-align: top;
 }
 
+.join_form .info_content .email_box {
+    position: relative;
+}
+
+
+.join_form .info_content .email_box:after {
+    content: '\f0dd';
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    color: #f00;
+    line-height: 45px;
+    display: inline-block;
+    transform: translateX(-30px);
+}
+
+.join_form .info_content select {
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+.join_form .info_content select::-ms-expand {
+    display: none;
+}
+
+
+
 .join_form .w320 {width: 320px;}
 .join_form .w160 {width: 160px;}
 .join_form .w100 {width: 100px;} 
@@ -81,8 +107,54 @@ select {color: #757575; height: 45px; vertical-align: middle;}
 
 #year, #date {padding-top: 2.8px;}
 
-.join_form .gender_area label,
-.join_form .hobby_area label {line-height: 40px; padding-right: 20px;}
+.join_form .gender_area label {
+    line-height: 40px;
+    padding-right: 20px;
+}
+.join_form .gender_area label:before {
+    content: '\f058';
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 400;
+    /* position: relative;  */
+    color: #555;
+    padding-right: 10px;
+}
+.join_form .gender_area input[type=radio]:checked + label:before {
+   font-weight: 900;
+   color: #f00
+
+}
+.join_form .hobby_area label {
+    line-height: 40px; padding-right: 20px;
+}
+
+.join_form .hobby_area label:before {
+    display: inline-block;
+    transform: scale(1.3) rotate(43deg) translate(0, 5px);
+    content: '\f004';
+    font-family: "Font Awesome 5 Free";
+    font-weight: 400;
+    color: #555;
+    /* padding-right: 5px; */
+}
+
+.join_form .hobby_area input[type=checkbox]:checked + label:before {
+    content: '\f004';
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    color: #f00;
+    padding-right: 10px;
+}
+
+.join_form .gender_area input[type=radio] {
+    /* transform: scale(0.5); */
+    display: none;
+}
+
+.join_form .hobby_area input[type=checkbox]{
+    display: none;
+
+}
 
 .join_form .info_content textarea {
     height: 245px; font-size: 15px; letter-spacing: -1px;
